# stonks-copy

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: agent_tools.md  memory_system.md  quant_system_pipeline.md  system_architecture.md  system_prompts.md
frontend/: index.html  package-lock.json  package.json  svelte.config.js  tsconfig.app.tsbuildinfo  tsconfig.json  vite.config.ts
frontend/.svelte-kit/: ambient.d.ts  non-ambient.d.ts  tsconfig.json
frontend/src/: app.css
ops/scripts/: doctor.sh  run-service.sh  setup-cliproxy-linux.sh  setup-linux.sh
quant_trading/: __init__.py  config.py  execution.py  jobs.py  main.py  market.py  orchestrator.py  runner.py  scheduler.py  schemas.py  timeutils.py  types.py
quant_trading.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
quant_trading/agents/: __init__.py  base.py  core.py
quant_trading/backtest/: __init__.py  cli.py  data_loader.py  engine.py  signals.py
quant_trading/db/: __init__.py  models.py  queries.py  repository.py  session.py
quant_trading/memory/: __init__.py  attribution.py  graph.py  reflection.py  semantic.py  structured.py
quant_trading/services/: __init__.py  backtester.py  execution.py  holiday_sync.py  market_clock.py  (+3 more)
tests/: test_agents.py  test_backtester.py  test_execution.py  test_execution_market.py  test_holiday_sync.py  test_market_clock.py  test_memory_reporting.py  test_orchestrator_ops.py  test_pairs_service.py  test_repository.py  test_scheduler.py  test_screener_client.py  test_services_quant.py  test_web_api.py
(+150 files in other folders)
